--- a/style.css
+++ b/style.css
@@ -22,9 +22,31 @@ nav{
     background-color: #BC6BFA;
     padding: 20px;
     font-size: 20px;
+    color: aliceblue;
 
 }
 
 nav a {
     color: aliceblue;
+    text-decoration: none;
+}
+
+
+nav a:hover{
+    text-decoration: underline;
+}
+
+h2{
+  margin-top: 30px;  
+
+
+}
+figcaption{
+  
+}
+
+footer{
+    background: rgba(0, 0, 0, 0.288);
+    padding: 20px;
+    color: white;
 }
